# etl_ynov

./: .env.example  .gitignore  mkdocs.yml
.github/workflows/: deploy-docs.yml
docs/: index.md
docs/dags/: clients-api.md  orchestrator.md  produits-sql.md  ventes-csv.md
etl/: pyproject.toml  requirements.txt
etl/dags/: callbacks.py  dag_clients_api.py  dag_orchestrator.py  dag_produits_sql.py  dag_ventes_csv.py  db.py
etl/tests/: conftest.py  test_dag_clients_api.py  test_dag_produits_sql.py  test_dag_ventes_csv.py
site/: 404.html  index.html
site/dags/clients-api/: index.html
site/dags/orchestrator/: index.html
site/dags/produits-sql/: index.html
site/dags/ventes-csv/: index.html
site/search/: search_index.json
site/stylesheets/: extra.css
