[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "etl-dags"
version = "1.0.0"
dependencies = [
    "apache-airflow-providers-postgres==5.12.0",
    "requests==2.32.3",
    "pandas==2.2.3",
    "pytest==8.3.2",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.2",
    "pytest-cov==5.0.0",
]
